--- a/PersistentActorExample/PersistentActorExample/app.config
+++ b/PersistentActorExample/PersistentActorExample/app.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-  <configSections>
-    <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
-  </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-  </startup>
-  <akka>
-    <hocon>
-      <![CDATA[
+    <configSections>
+        <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
+    </configSections>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+    </startup>
+    <akka>
+        <hocon>
+            <![CDATA[
         akka {
           persistence {
             journal {
@@ -18,8 +19,8 @@
                 class = "Akka.Persistence.PostgreSql.Journal.PostgreSqlJournal, Akka.Persistence.PostgreSql"
                 schema-name = public
                 auto-initialize = on
-                connection-string = "jdbc:postgresql://localhost:5432/persistence"
-                #connection-string = "Server=localhost;Port=5432;Database=persistence"
+                #connection-string = "jdbc:postgresql://localhost:5432/persistence"
+                connection-string = "Server=localhost;Port=5432;Database=persistence"
               }
               sql-server {
                 class = "Akka.Persistence.SqlServer.Journal.SqlServerJournal, Akka.Persistence.SqlServer"
@@ -35,8 +36,8 @@
                 class = "Akka.Persistence.PostgreSql.Snapshot.PostgreSqlSnapshotStore, Akka.Persistence.PostgreSql"
                 schema-name = public
                 auto-initialize = on
-                connection-string = "jdbc:postgresql://localhost:5432/persistence"
-                #connection-string = "Server=localhost;Port=5432;Database=persistence"
+                #connection-string = "jdbc:postgresql://localhost:5432/persistence"
+                connection-string = "Server=localhost;Port=5432;Database=persistence"
               }
               sql-server {
                 class = "Akka.Persistence.SqlServer.Snapshot.SqlServerSnapshotStore, Akka.Persistence.SqlServer"
@@ -48,22 +49,6 @@
           }   
         }
       ]]>
-    </hocon>
-  </akka>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.5.0" newVersion="1.2.5.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+        </hocon>
+    </akka>
 </configuration>
